# SillyStage

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh.md  justfile
.github/workflows/: release.yml  website-check.yml  website-deploy.yml
docs/en/: character.md  process.md
docs/en/api/: http.md  reference.md  spec.md
docs/zh/: character.md  process.md
docs/zh/api/: http.md  reference.md  spec.md
scripts/: bump-version.sh  package-app.ps1  package-app.sh
ss-agents/: Cargo.toml
ss-agents/examples/: actor_smoke.rs  architect_smoke.rs  director_smoke.rs  keeper_smoke.rs  narrator_smoke.rs
ss-agents/src/: actor.rs  architect.rs  director.rs  keeper.rs  lib.rs  narrator.rs  planner.rs  prompt.rs  replyer.rs
ss-agents/src/prompts/: actor.txt  architect.txt  architect_draft.txt  architect_draft_continue.txt  architect_draft_init.txt  architect_repair.txt  director.txt  keeper.txt  narrator.txt  planner.txt  replyer.txt
ss-agents/tests/: actor.rs  architect.rs  director.rs  keeper.rs  narrator.rs  planner.rs  replyer.rs
ss-agents/tests/common/: mod.rs
ss-app/: Cargo.toml
ss-app/src/: app.rs  browser.rs  config.rs  error.rs  frontend.rs  lib.rs  llm.rs  main.rs
ss-app/tests/: config.rs  http.rs
ss-engine/: Cargo.toml
ss-engine/examples/: engine_story_direct_smoke.rs  engine_story_from_resources_smoke.rs
ss-engine/examples/common/: mod.rs
ss-engine/src/: engine.rs  event.rs  history.rs  lib.rs  logging.rs  lorebook.rs  manager.rs  registry.rs  runtime.rs
ss-engine/src/manager/: error.rs  preview.rs  replies.rs  resolve.rs  session.rs  session_characters.rs  story_generation.rs  util.rs
ss-engine/src/prompt/: compile.rs  contracts.rs  defaults.rs  mod.rs  normalize.rs  preview.rs  templates.rs  types.rs
ss-engine/tests/: engine.rs  manager.rs  prompt.rs  registry.rs  runtime.rs
ss-engine/tests/common/: mod.rs
ss-handler/: Cargo.toml
ss-handler/src/: error.rs  handler.rs  lib.rs  store.rs
ss-handler/src/handler/: api.rs  api_group.rs  config.rs  dashboard.rs  data_package.rs  llm_api.rs  lorebook.rs  player_profile.rs  preset.rs  schema.rs  session.rs  story.rs  upload.rs
ss-handler/tests/: handler.rs
ss-handler/tests/common/: mod.rs
ss-llm-api/: Cargo.toml
ss-llm-api/src/: api.rs  error.rs  lib.rs
ss-llm-api/src/providers/: openai.rs
ss-llm-api/tests/: openai.rs
ss-protocol/: Cargo.toml
ss-protocol/src/: api.rs  api_group.rs  binary.rs  character.rs  config.rs  data_package.rs  default_llm_config.rs  error.rs  lib.rs  llm_api.rs  lorebook.rs  message.rs  player_profile.rs  preset.rs  reply_suggestion.rs  request.rs  response.rs  schema.rs  session_character.rs  session_message.rs  session_variable.rs  stream_event.rs
ss-protocol/tests/: character.rs  data_package.rs  message.rs  request.rs  stream_event.rs
ss-server/: Cargo.toml
ss-server/src/: lib.rs  state.rs
ss-server/src/http/: binary.rs  logging.rs  mod.rs  router.rs  rpc.rs  sse.rs
ss-server/tests/: http.rs
ss-server/tests/common/: mod.rs
ss-state/: Cargo.toml
ss-state/src/: lib.rs  schema.rs  update.rs  world_state.rs
ss-state/tests/: schema.rs  world_state.rs
ss-store/: Cargo.toml
ss-store/src/: config.rs  error.rs  fs.rs  lib.rs  memory.rs  record.rs  store.rs
ss-store/tests/: fs_store.rs  store.rs
ss-story/: Cargo.toml
ss-story/src/: common_variable.rs  condition.rs  graph.rs  lib.rs  node.rs  runtime_graph.rs  storage.rs  transition.rs  validator.rs
webapp/: .gitignore  AGENTS.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
webapp/desc/: theme.md
webapp/scripts/: run-biome.mjs
webapp/src/: App.tsx  index.css
webapp/src/app/: paths.ts  workspace-navigation.ts
webapp/src/components/: headbar-menu.tsx  language-toggle.tsx  prompt-viewer-copy.ts  prompt-viewer.tsx  theme-provider.tsx  workspace-rail.tsx  workspace-sidebar.tsx
webapp/src/components/layout/: app-shell.tsx  headbar.tsx  workspace-context.ts  workspace-layout.tsx  workspace-panel-shell.tsx
webapp/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog-route-button.tsx  dialog.tsx  generation-loading-stage.tsx  icon-button.tsx  input.tsx  popup-menu.tsx  section-header.tsx  segmented-selector.tsx  select.tsx  selection-toggle-button.tsx  switch.tsx  textarea.tsx  toast-context.ts  toast-provider.tsx
webapp/src/data/: home.ts
webapp/src/features/apis/: api-details-dialog.tsx  api-form-dialog.tsx  api-group-details-dialog.tsx  api-group-form-dialog.tsx  api-management-page.tsx  api.ts  delete-api-dialog.tsx  delete-api-group-dialog.tsx  llm-api-details-dialog.tsx  llm-api-form-dialog.tsx  types.ts
webapp/src/features/characters/: api.ts  character-archive.ts  character-details-dialog.tsx  character-management-page.tsx  create-character-dialog.tsx  delete-character-dialog.tsx  folder-registry.ts  types.ts
webapp/src/features/dashboard/: api.ts  dashboard-data-package-actions.tsx  dashboard-page.tsx  types.ts
webapp/src/features/demo-content/: insert-sample-dialog.tsx  konosuba-sample-data.ts  lorebook-sample-data.ts
webapp/src/features/lorebooks/: api.ts  delete-lorebook-dialog.tsx  lorebook-form-dialog.tsx  lorebook-management-page.tsx  lorebook-transfer.ts  types.ts
webapp/src/features/player-profiles/: api.ts  delete-player-profile-dialog.tsx  player-profile-form-dialog.tsx  player-profiles-page.tsx  types.ts
webapp/src/features/presets/: delete-preset-dialog.tsx  preset-details-dialog.tsx  preset-form-dialog.tsx  preset-labels.ts  preset-management-page.tsx  preset-presets.ts  preset-template-dialog.tsx  (+4 more)
webapp/src/i18n/: config.ts  index.ts  react-i18next.d.ts  resources.ts
webapp/src/lib/: base64.ts  batch-delete.ts  binary-resource.ts  json-transfer.ts  rpc.ts  state-schema.ts
webapp/src/pages/: home-page.tsx
webapp/src/theme/: config.ts  context.ts  use-system-theme.ts  use-theme.ts
website/: AGENTS.md  README.md  biome.json  package.json  pnpm-lock.yaml  rspress.config.ts
website/docs/: _nav.json  index.md
website/docs/en/: _meta.json  index.md
website/docs/zh/: _meta.json  index.md
(+94 files in other folders)
