[package]
name = "ss-agents"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
llm.workspace = true
state.workspace = true
story.workspace = true

futures-core.workspace = true
futures-util.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true

[dev-dependencies]
async-trait.workspace = true
dotenvy.workspace = true
tokio.workspace = true
