[package]
name = "ss-app"
version = "0.1.1"
edition.workspace = true
license-file.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

engine.workspace = true
handler.workspace = true
llm.workspace = true
server.workspace = true
store.workspace = true

[dev-dependencies]
protocol.workspace = true
serde_json.workspace = true
