[package]
name = "ss-engine"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
async-stream.workspace = true
agents.workspace = true
futures-core.workspace = true
futures-util.workspace = true
llm.workspace = true
serde.workspace = true
state.workspace = true
story.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
