[package]
name = "ss-engine"
version = "0.1.1"
edition.workspace = true
license-file.workspace = true

[dependencies]
async-stream.workspace = true
futures-core.workspace = true
futures-util.workspace = true
llm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

agents.workspace = true
state.workspace = true
store.workspace = true
story.workspace = true

[dev-dependencies]
async-trait.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
