[package]
name = "ss-handler"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
async-stream.workspace = true
base64.workspace = true
futures-core.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
llm.workspace = true

engine.workspace = true
protocol.workspace = true
agents.workspace = true
store.workspace = true
story.workspace = true
state.workspace = true

[dev-dependencies]
async-trait.workspace = true
