[package]
name = "ss-llm-api"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
async-trait.workspace = true
eventsource-stream.workspace = true
futures-core.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
