[package]
name = "ss-protocol"
version = "0.1.1"
edition.workspace = true
license-file.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zip.workspace = true

agents.workspace = true
engine.workspace = true
state.workspace = true
story.workspace = true
store.workspace = true
