[package]
name = "ss-server"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
async-stream.workspace = true
axum.workspace = true
futures-core.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

handler.workspace = true
protocol.workspace = true

[dev-dependencies]
async-trait.workspace = true
base64.workspace = true
llm.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
engine.workspace = true
store.workspace = true
state.workspace = true
story.workspace = true
agents.workspace = true
