[package]
name = "ss-store"
version = "0.1.1"
edition.workspace = true
license-file.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }

agents.workspace = true
state.workspace = true
story.workspace = true
